# nebulagraph-ai

./: .gitignore  HACKING.md  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
docker/: Dockerfile-jupyter-networkx  Dockerfile-jupyter-spark  Dockerfile-ngai-graphd  docker-compose-ext.yaml
docs/: API.md  Environment_Setup.md  ng_ai_API_Gateway.md  ngdi_API_Gateway.md
examples/: networkx_engine.ipynb  ng_ai_from_ngql_udf.ipynb  ng_ai_networkx_plot.ipynb  ngdi_from_ngql_udf.ipynb  run_ng_ai_api.py  run_ngdi_api.py  spark_engine.ipynb  spark_engine_examples.ipynb
ng_ai/: __init__.py  engines.py  nebula_algo.py  nebula_data.py  nebula_gnn.py  nebula_reader.py  nebula_writer.py
ng_ai/ng_ai_api/: __main__.py  app.py
ngai/: __init__.py  nebula_algo.py  nebula_writer.py
ngdi/: __init__.py  config.py  engines.py  nebula_algo.py  nebula_data.py  nebula_gnn.py  nebula_reader.py  nebula_writer.py
ngdi/ngdi_api/: __main__.py  app.py
tests/integration/: README.md  conftest.py  test_e2e_networkx_engine.py  test_e2e_spark_engine.py
tests/integration/notebooks/: spark_engine_e2e.ipynb
tests/integration/setup/: docker-compose.yaml
tests/integration/spark_engine_cases/: algo.py  query_reader.py  scan_reader.py  writer.py
tests/unit/: test_nebula_algo.py  test_nebula_data.py  test_nebula_reader.py
tests/unit/spark_engine/: test_nebula_data.py  test_nebula_writer.py
udf/: Makefile  README.md  http_client.h  ng_ai.cpp  ng_ai.h  ngdi.cpp  ngdi.h
