[tool.pdm]

[tool.pdm.scripts]
ng_ai-api = {call = "ng_ai.ng_ai_api.__main__:run"}

[project]
name = "ng_ai"
version = "0.2.7"
description = "NebulaGraph Data Intelligence Suite"
authors = [
    {name = "Wey Gu", email = "weyl.gu@gmail.com"},
]
dependencies = [
    "flask>=2.0.3",
    "networkx>=2.5.1",
]
requires-python = ">=3.6"
readme = "README.md"
license = {text = "Apache-2.0"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[project.optional-dependencies]
spark = ["pyspark>=3.2.3"]
networkx = ["networkx>=2.5.1"]
all = ["ng_ai[spark,networkx]"]